Update readme file

--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Chat Assistant - Clarity & Discoverability</title>
-    <meta name="description" content="Modern AI chat interface with seamless theme switching and organic growth design" />
-    <meta name="author" content="Lovable" />
-
+    <title>AI Chat Assistant</title>
+    <meta
+      name="description"
+      content="Modern AI chat interface with seamless theme switching"
+    />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <meta property="og:title" content="AI Chat Assistant" />
-    <meta property="og:description" content="Modern AI chat interface with seamless theme switching and organic growth design" />
+    <meta
+      property="og:description"
+      content="Modern AI chat interface with seamless theme switching"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
